@@ -90,6 +90,7 @@ gerritclient =
     project_branch_create=gerritclient.commands.project:ProjectBranchCreate
     project_branch_delete=gerritclient.commands.project:ProjectBranchDelete
     project_branch_list=gerritclient.commands.project:ProjectBranchList
+    project_branch_reflog_show=gerritclient.commands.project:ProjectBranchReflogShow
     project_branch_show=gerritclient.commands.project:ProjectBranchShow
     project_child_list=gerritclient.commands.project:ProjectChildList
     project_create=gerritclient.commands.project:ProjectCreate
